# event-store

./: .gitignore  Cargo.toml  Dockerfile  README.md  canister_ids.json  dfx.json  rust-toolchain.toml
.github/workflows/: backend.yaml  build_caches.yaml
canister/api/: Cargo.toml  can.did
canister/api/src/: lib.rs
canister/api/src/queries/: events.rs
canister/api/src/updates/: mod.rs  push_events.rs  remove_events.rs
canister/impl/: Cargo.toml
canister/impl/src/: env.rs  guards.rs  lib.rs  state.rs
canister/impl/src/lifecycle/: init.rs
canister/impl/src/model/: events.rs
canister/impl/src/queries/: events.rs
canister/impl/src/updates/: push_events.rs  remove_events.rs
client/: Cargo.toml
client/agent_runtime/: Cargo.toml
client/agent_runtime/src/: lib.rs
client/cdk_runtime/: Cargo.toml
client/cdk_runtime/src/: lib.rs
client/src/: lib.rs  tests.rs
integration_tests/: Cargo.toml
integration_tests/src/: client.rs  lib.rs  rng.rs
rs/canister/: CHANGELOG.md
rs/canister/api/: Cargo.toml  can.did
rs/canister/api/src/: lib.rs
rs/canister/api/src/lifecycle/: init.rs
rs/canister/api/src/queries/: events.rs  mod.rs  whitelisted_principals.rs
rs/canister/api/src/updates/: mod.rs  push_events.rs  remove_events.rs
rs/canister/impl/: Cargo.toml
rs/canister/impl/src/: env.rs  guards.rs  lib.rs  memory.rs  state.rs
rs/canister/impl/src/integrations/: dapp_radar.rs  mod.rs
rs/canister/impl/src/lifecycle/: heartbeat.rs  init.rs  mod.rs  post_upgrade.rs
rs/canister/impl/src/model/: events.rs  events_v2.rs  integrations_data.rs  mod.rs  string_to_num_map.rs
rs/canister/impl/src/queries/: events.rs  http_request.rs  mod.rs  whitelisted_principals.rs
rs/canister/impl/src/updates/: mod.rs  push_events.rs
rs/client/: Cargo.toml
rs/client/agent_runtime/: Cargo.toml
rs/client/agent_runtime/src/: lib.rs
rs/client/cdk_runtime/: Cargo.toml
rs/client/cdk_runtime/src/: lib.rs
rs/client/src/: json.rs  lib.rs  tests.rs
rs/consumer/: Cargo.toml
rs/consumer/agent_runtime/: Cargo.toml
rs/consumer/agent_runtime/src/: lib.rs
rs/consumer/cdk_runtime/: Cargo.toml
rs/consumer/cdk_runtime/src/: lib.rs
rs/consumer/src/: lib.rs
rs/integration_tests/: Cargo.toml
rs/integration_tests/src/: client.rs  lib.rs  rng.rs  setup.rs
rs/producer/: Cargo.toml
rs/producer/agent_runtime/: Cargo.toml
rs/producer/agent_runtime/src/: lib.rs
rs/producer/cdk_runtime/: Cargo.toml
rs/producer/cdk_runtime/src/: lib.rs
rs/producer/src/: lib.rs  tests.rs
rs/types/: Cargo.toml
rs/types/src/: lib.rs
rs/utils/: Cargo.toml
rs/utils/src/: event_deduper.rs  lib.rs
scripts/: build-wasm.sh  docker-build-wasm.sh  run-integration-tests.sh
src/event_sink_backend/: Cargo.toml
ts/consumer/: .prettierignore  compile-candid.sh  package-lock.json  package.json  tsconfig.json
ts/consumer/src/: client.ts  external-types.d.ts  index.ts  mappers.ts  types.ts
ts/consumer/src/candid/: idl.d.ts  idl.js  types.d.ts
utils/: Cargo.toml
utils/src/: event_deduper.rs
