[workspace]
members = [
    "rs/canister/api",
    "rs/canister/impl",
    "rs/consumer",
    "rs/consumer/agent_runtime",
    "rs/consumer/cdk_runtime",
    "rs/producer",
    "rs/producer/agent_runtime",
    "rs/producer/cdk_runtime",
    "rs/integration_tests",
    "rs/utils",
]
resolver = "2"

[workspace.package]
version = "0.5.0"
edition = "2021"

[workspace.dependencies]
candid = "0.10.10"
ic-agent = "0.39.1"
ic-cdk = "0.17.0"
ic-cdk-timers = "0.11.0"
ic-http-certification = "2.6.0"
ic_principal = "0.1.1"
ic-stable-structures = "0.6.6"
pocket-ic = "5.0.0"
querystring = "1.1.0"
rand = "0.8.5"
rmp-serde = "1.3.0"
serde = "1.0.215"
serde_bytes = "0.11.15"
serde_json = "1.0.132"
sha2 = "0.10.8"
test-case = "3.3.1"
time = "0.3.36"
tokio = "1.41.1"
tokio-util = "0.7.12"
tracing = "0.1.40"
