[package]
name = "event_sink_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
event_sink_canister.path = "../api"
ic-cdk.workspace = true
serde = { version = "1.0.196", features = ["derive"] }
