[package]
name = "event_sink_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic_principal.workspace = true
event_sink_canister.path = "../canister/api"
serde.workspace = true
serde_json.workspace = true
serde_json.optional = true

[dev-dependencies]
test-case.workspace = true

[features]
json = ["serde_json"]
