[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid.workspace = true
event_sink_canister.path = "../canister/api"
pocket-ic.workspace = true
rand.workspace = true
serde.workspace = true
