[package]
name = "integration_tests"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid.workspace = true
event_store_canister.path = "../canister/api"
event_store_types.path = "../types"
pocket-ic.workspace = true
rand.workspace = true
serde.workspace = true
test-case.workspace = true
