[package]
name = "event_store_producer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic_principal.workspace = true
event_store_canister.path = "../canister/api"
serde.workspace = true
serde_json.workspace = true
serde_json.optional = true

[dev-dependencies]
test-case.workspace = true

[features]
json = ["serde_json"]
