[package]
name = "event_store_producer"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ic_principal.workspace = true
event_store_types.path = "../types"
serde.workspace = true

[dev-dependencies]
test-case.workspace = true

[features]
json = ["event_store_types/json"]