[package]
name = "event_store_canister"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
serde.workspace = true
serde_bytes.workspace = true

[dev-dependencies]
rmp-serde = "1.1.2"
test-case.workspace = true
