[package]
name = "event_store_canister_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
event_store_canister.path = "../api"
event_store_utils.path = "../../utils"
ic-cdk.workspace = true
ic-stable-structures.workspace = true
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
