[package]
name = "event_store_canister_impl"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
event_store_canister.path = "../api"
event_store_utils.path = "../../utils"
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-http-certification.workspace = true
ic-stable-structures.workspace = true
querystring = { workspace = true, optional = true }
rmp-serde.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json = { workspace = true, optional = true }
sha2.workspace = true
time = { workspace = true, optional = true }

[features]
default = ["dapp-radar"]
dapp-radar = ["querystring", "serde_json", "time"]
