[package]
name = "event_store_producer_agent_runtime"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
event_store_canister.path = "../../canister/api"
event_store_producer.path = ".."
event_store_types.path = "../../types"
ic-agent.workspace = true
ic_principal.workspace = true
rand.workspace = true
tokio.workspace = true
tokio.features = ["full"]
tokio-util.workspace = true
